Margin - icon overflow bug in mobile landscape

--- a/public/menu.css
+++ b/public/menu.css
@@ -170,9 +170,9 @@
         margin-top: -5em;
         padding-top: 6em;
     }
-    #menu .menu-items.is-open li {
+    /* #menu .menu-items.is-open li {
         margin: 47px 0;
-    }
+    } */
     .tgl+.tgl-btn {
         margin-right: 3em;
         margin-top: 1em;
